--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "clsx": "^2.1.1",
     "i18next": "^25.7.3",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "next-i18next": "^15.4.3",
     "next-intl": "^4.5.0",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^16.5.1",
     "tailwind-merge": "^3.4.0"
   },
